--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
             <version>8.0.18</version>
         </dependency>
 
+        <!-- Json转换 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.31</version>
+        </dependency>
+
     </dependencies>
 
 
